@@ -2,6 +2,13 @@
 
 	reviewed by: Sebastien Merle
 
+	* flumotion/test/test_http.py:
+	Generate an id for the keycard in the fake authentication medium.
+
+2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>
+
+	reviewed by: Sebastien Merle
+
 	* flumotion/component/base/http.py:
 	Remove deprecated API usage.
 
